LLVM implementation for basic program WIP
Former-commit-id: f8caa42e5e1e5b576815a3af86b8df42af1b032c

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,7 @@
       "request": "launch",
       "mainClass": "Main",
       "projectName": "PINSCompiler_e4e36e37",
-      "args": "PINS pins.txt --dump IMC --exec IMC"
+      "args": "PINS add.txt --dump IMC --exec IMC"
     },
     {
       "type": "java",
@@ -29,7 +29,7 @@
       "request": "launch",
       "mainClass": "Main",
       "projectName": "PINSCompiler_e4e36e37",
-      "args": "PINS pins.txt --dump TYP --exec TYP"
+      "args": "PINS add.txt --dump TYP --exec TYP"
     }
   ]
 }
