added jni path to all launch options
Former-commit-id: 3908c70eb35f64b12f3667939bd1fc825cd6097c

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,15 @@
       "name": "INT",
       "request": "launch",
       "mainClass": "Main",
-      "args": "PINS add.txt --dump INT --exec INT"
+      "vmArgs": "-Djava.library.path=/home/amadej/pinscompiler/jni",
+      "args": "PINS add.txt --dump INT --exec INT",
     },
     {
       "type": "java",
       "name": "IMC",
       "request": "launch",
       "mainClass": "Main",
+      "vmArgs": "-Djava.library.path=/home/amadej/pinscompiler/jni",
       "args": "PINS add.txt --dump IMC --exec IMC"
     },
     {
@@ -19,6 +21,7 @@
       "name": "TYP",
       "request": "launch",
       "mainClass": "Main",
+      "vmArgs": "-Djava.library.path=/home/amadej/pinscompiler/jni",
       "args": "PINS add.txt --dump TYP --exec TYP"
     }
   ]
