AST launch added
Former-commit-id: 2394701995598ff3b4335a469187d1cb3bee3be2

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,6 +23,14 @@
       "mainClass": "Main",
       "vmArgs": "-Djava.library.path=${workspaceFolder}/jni",
       "args": "PINS add.txt --dump TYP --exec TYP"
+    },
+    {
+      "type": "java",
+      "name": "AST",
+      "request": "launch",
+      "mainClass": "Main",
+      "vmArgs": "-Djava.library.path=${workspaceFolder}/jni",
+      "args": "PINS add.txt --dump AST --exec AST"
     }
   ]
 }
