LEX and SYN configurations added
Former-commit-id: b6741c9c961a84d0aaaf88f8ca3fd58ad7ec2b85

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,6 +31,22 @@
       "mainClass": "Main",
       "vmArgs": "-Djava.library.path=${workspaceFolder}/jni",
       "args": "PINS add.txt --dump AST --exec AST"
+    },
+    {
+      "type": "java",
+      "name": "LEX",
+      "request": "launch",
+      "mainClass": "Main",
+      "vmArgs": "-Djava.library.path=${workspaceFolder}/jni",
+      "args": "PINS add.txt --dump LEX --exec LEX"
+    },
+    {
+      "type": "java",
+      "name": "SYN",
+      "request": "launch",
+      "mainClass": "Main",
+      "vmArgs": "-Djava.library.path=${workspaceFolder}/jni",
+      "args": "PINS add.txt --dump SYN --exec SYN"
     }
   ]
 }
