added OBJ config
Former-commit-id: 0f6162f7853773bae286b7570a7f1f4f9fd4e3c7

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,14 @@
   "configurations": [
     {
       "type": "java",
+      "name": "OBJ",
+      "request": "launch",
+      "mainClass": "Main",
+      "vmArgs": "-Djava.library.path=${workspaceFolder}/jni",
+      "args": "PINS add.txt --dump OBJ --exec OBJ"
+    },
+    {
+      "type": "java",
       "name": "INT",
       "request": "launch",
       "mainClass": "Main",
